<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pb_main_download"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="100" />

        <TextView
            android:id="@+id/tv_main_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pb_main_download"
            android:gravity="center"
            android:textSize="15dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_deviceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_main_desc"
            android:gravity="center"
            android:text="@string/filesListText"
            style="@style/textSize_14"
            android:textSize="@dimen/dimen_20"
        />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_deviceLabel"
            tools:listitem="@layout/files_list" />

        <Button
            android:id="@+id/receiveInvoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_30"
            android:contentDescription="@string/add_group_event"
            android:gravity="center"
            android:text="@string/invoice_download" />
    </RelativeLayout>
</layout>
